--- a/static/index.css
+++ b/static/index.css
@@ -1,5 +1,13 @@
+.text-outline {
+  text-shadow:
+    -1px -1px 0 black,
+    1px -1px 0 black,
+    -1px 1px 0 black,
+    1px 1px 0 black;
+}
+
 .text-rainbow {
-  background: linear-gradient(to bottom right, #ec48a2 25%, #10b981 35%, #3b82f6 45%, #ec4899 55%, #10b981 65%, #3b82f6 75%);
+  background: linear-gradient(to bottom right, #8b5cf6 25%, #10b981 35%, #3b82f6 45%, #8b5cf6 55%, #10b981 65%, #3b82f6 75%);
   background-size: 275% 100%;
   background-clip: text;
   -webkit-background-clip: text;
