--- a/static/offline.css
+++ b/static/offline.css
@@ -33,11 +33,6 @@ body {
   line-height: 1;
 }
 
-.text-6xl {
-  font-size: 4rem;
-  line-height: 1;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -95,11 +90,11 @@ body {
 }
 
 .bg-rainbow {
-  background: linear-gradient(135deg, #ec4899, #10b981, #3b82f6);
+  background: linear-gradient(135deg, #8b5cf6, #10b981, #3b82f6);
 }
 
 .text-rainbow {
-  background: linear-gradient(to bottom right, #ec4899 25%, #10b981 35%, #3b82f6 45%, #ec4899 55%, #10b981 65%, #3b82f6 75%);
+  background: linear-gradient(to bottom right, #8b5cf6 25%, #10b981 35%, #3b82f6 45%, #8b5cf6 55%, #10b981 65%, #3b82f6 75%);
   background-size: 275% 100%;
   background-clip: text;
   -webkit-background-clip: text;
